[gd_scene load_steps=6 format=3 uid="uid://of3ei4lci41k"]

[ext_resource type="Script" path="res://raze_Victory_Screen.gd" id="1_04n8g"]
[ext_resource type="Theme" uid="uid://c72ukk1bonn6d" path="res://src/appdata/Lucrato_Theme.tres" id="2_i52ma"]
[ext_resource type="Theme" uid="uid://d1nkb8nf83lha" path="res://src/appdata/Long_Buttons_Lucrato_Theme.tres" id="3_blk2t"]

[sub_resource type="InputEventKey" id="InputEventKey_yeheu"]
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_q12ma"]
events = [SubResource("InputEventKey_yeheu")]

[node name="endgame_screen" type="CanvasLayer"]
script = ExtResource("1_04n8g")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.25434
anchor_top = 0.233025
anchor_right = 0.772569
anchor_bottom = 0.751543
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_i52ma")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.917647, 0.827451, 0.87451, 1)
metadata/_edit_use_anchors_ = true

[node name="Quit_Button" type="Button" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.59799
anchor_top = 0.892858
anchor_right = 0.917923
anchor_bottom = 0.997025
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_blk2t")
action_mode = 0
shortcut = SubResource("Shortcut_q12ma")
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="Final_Score Label" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21943
anchor_top = 0.598216
anchor_right = 0.822446
anchor_bottom = 0.726191
grow_horizontal = 2
theme = ExtResource("2_i52ma")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Answer label" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21943
anchor_top = 0.386906
anchor_right = 0.822446
anchor_bottom = 0.491072
grow_horizontal = 2
theme = ExtResource("2_i52ma")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Result Label" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17923
anchor_top = 0.0297614
anchor_right = 0.793971
anchor_bottom = 0.318453
theme = ExtResource("2_i52ma")
theme_override_font_sizes/font_size = 30
text = "Victory!!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Next_Level_Button" type="Button" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.370185
anchor_top = 0.77381
anchor_right = 0.658292
anchor_bottom = 0.863096
theme = ExtResource("3_blk2t")
text = "Next level"
metadata/_edit_use_anchors_ = true

[node name="TryAgain" type="Button" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.120604
anchor_top = 0.895834
anchor_right = 0.435511
anchor_bottom = 0.994049
scale = Vector2(1, 1.00334)
theme = ExtResource("3_blk2t")
text = "Try again"
metadata/_edit_use_anchors_ = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/ColorRect/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/Next_Level_Button" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/TryAgain" to="." method="_on_try_again_pressed"]
